<resources>
    <string name="app_name">League Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_get_a_prediction">How to get a prediction</string>
    <string name="_365">365</string>
    <string name="settings">Settings</string>
    <string name="_0">0</string>
    <string name="find_out">Find out</string>
    <string name="the_next_cookie_will_open_in_10_min">The next cookie will open in 10 min</string>
    <string name="south_korea_k3_league">South Korea K3 League</string>
    <string name="south_korea_k_league_2">South Korea K League 2</string>
    <string name="south_korea_k_league_1">South Korea K League 1</string>
    <string name="_11_08_2023">11.08.2023</string>
    <string name="get_extra_biscuit">Get extra biscuit</string>
    <string name="team_1">Team 1</string>
    <string name="last_season">Last season</string>
    <string name="team_name">Team name</string>
    <string name="pos">Points</string>
    <string name="loss">Loss</string>
    <string name="draw">Draw</string>
    <string name="win">Win</string>
    <string name="games">Games</string>
    <string name="_13_08_2023">13.08.2023</string>
    <string name="_14_08_2023">14.08.2023</string>
    <string name="_12_08_2023">12.08.2023</string>
    <string name="_19_08_2023">19.08.2023</string>
    <string name="_20_08_2023">20.08.2023</string>
    <string name="liga_profesional_de_f_tbol">Liga Profesional de Fútbol</string>
    <string name="table_of_league">Table of league</string>
    <string name="liga_deportiva_universitaria_de_quito">Liga Deportiva Universitaria de Quito</string>
    <string name="superligaen">Superligaen</string>
    <string name="rules">Rules</string>
    <string name="rules_main">In the appendix you will find information about the standings of the four countries. They open periodically and open country championships will be without blocking. Plus, you will be given some upcoming matches from the championships, with their odds to win them.</string>
    <string name="upcoming_matches">Upcoming matches</string>
    <string name="tv4">From 18:00 to 00:00 you can watch the Ecuador championship</string>
    <string name="tv3">From 12:00 to 18:00 you can watch the Argentina championship</string>
    <string name="tv2">From 6:00 to 12:00 you can watch the Denmark championship</string>
    <string name="tv1">From 00:00 to 6:00 you can watch the Korea championship</string>
    <string name="rules3">Below you can see the active hours of various championships</string>
    <string name="rules4">You can unlock country championships using cookies</string>
    <string name="skip">Skip</string>
</resources>