<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".presentation.fragments.korea.TableFragmentKor">

    <TextView
        android:id="@+id/tv_last_arg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/last_season"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/header_arg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/green_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_last_arg">

        <TextView
            android:id="@+id/teamNameTextView"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/team_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/games_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/games"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/win_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/win"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/draw_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/draw"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/loss_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/loss"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/team_position"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/pos"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDenmark"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_arg"
        tools:listitem="@layout/item_table_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>