<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/home_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/back_for_top_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="6dp"
            android:src="@drawable/cookie" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upcoming_matches"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_korea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/liga_deportiva_universitaria_de_quito"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <ImageView
        android:id="@+id/korea_small_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ecu_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_korea1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_layout1"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/korea_small_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e1" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Аукас"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_14_08_2023"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e2" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="ЛДУ Кито"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="3.1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="3.54"

                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="2.35"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e3" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Эмелек"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_13_08_2023"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e4" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Оренсе"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"

                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e5" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Гуаласео"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_12_08_2023"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/e6" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Мушук Руна"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"

                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/green_bg"
                    android:gravity="center"
                    android:text="1.23"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/table"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_bg"
        android:gravity="center"
        android:text="@string/table_of_league"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/const_layout1" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/opened_cookie2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table" />
</androidx.constraintlayout.widget.ConstraintLayout>